tests/testcases/invalid/semantic/26_return_without_value_in_non_void.ciel
// Error: return without expression in non-void function
int get_value() {
    return;  // Error: should return an int
}

int main() {
    int x = get_value();
    return 0;
}
